--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@
 
 html,
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /* Form Input */
@@ -132,7 +132,6 @@ body {
   }
 }
 
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 .sidebar::-webkit-scrollbar {
   display: none;
@@ -140,6 +139,22 @@ body {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .sidebar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scroll-to-top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 15px 20px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.scroll-to-top-button:hover {
+  background-color: #0056b3;
 }
