--- a/client/src/index.css
+++ b/client/src/index.css
@@ -225,3 +225,8 @@ body {
   .cube-face.top    { transform: rotateX( 90deg) translateZ(25px); }
   .cube-face.bottom { transform: rotateX(-90deg) translateZ(25px); }
 }
+
+@media only screen and (max-width:639px) {
+  .mobile{
+   display: none;
+  }}
